Files.readString was introduced after Java 11, changing code for compatibility to Java 8